Added Data, Domain and Presentation layer boilerplate code.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   # Remote API
   data_connection_checker: ^0.3.4
   http: ^0.12.2
+  connectivity: ^2.0.2
   # Local cache
   shared_preferences: ^0.5.12+4
   # localization
