--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   equatable: ^1.2.5
   # Service locator
   get_it: ^5.0.3
+  # For Navigation and Themes.
+  get:
 
   # Functional programming in Dart.
   dartz: ^0.9.2
