--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,22 +11,27 @@ dependencies:
   flutter:
     sdk: flutter
 
+
+  # Push notifications.
+  firebase_messaging: ^10.0.0
+  firebase_core: ^1.2.0
+  firebase_crashlytics: ^2.1.1
   # Bloc for state management
-  flutter_bloc: ^6.1.3
+  flutter_bloc: ^7.3.1
   # font awesome library.
-  font_awesome_flutter: ^8.5.0
+  font_awesome_flutter: ^9.2.0
   # Value equality
   equatable: ^2.0.0
   # Service locator
-  get_it: ^6.0.0
+  get_it: ^7.2.0
   # For Navigation and Themes.
   get:
 
   # Functional programming in Dart.
-  dartz: ^0.9.2
+  dartz: ^0.10.0
 
   # Local cache
-  shared_preferences: ^2.0.3
+  shared_preferences: ^2.0.8
 
   # Localization
   flutter_localizations:
@@ -36,15 +41,17 @@ dependencies:
 
   # Networking
   data_connection_checker: ^0.3.4
-  dio: ^3.0.10
+  dio: ^4.0.1
   connectivity: ^3.0.2
+  flutter_local_notifications: ^9.0.1
+  ndialog: ^4.1.0
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^5.0.0
+  mockito: ^5.0.16
 
 # The following section is specific to Flutter.
 flutter:
