--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,19 +39,48 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.tutorials.flutter_app"
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+        ndk {
+            abiFilters 'x86', 'armeabi-v7a', 'arm64-v8a', 'x86_64'
+        }
     }
 
     buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+        debug {
             signingConfig signingConfigs.debug
+            debuggable true
         }
+        release {
+            shrinkResources false
+            minifyEnabled false
+            signingConfig signingConfigs.debug
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    flavorDimensions "defaultFlavor"
+    productFlavors {
+        dev {
+            dimension "defaultFlavor"
+            applicationId 'com.tutorials.flutter_app'
+            buildConfigField 'String', 'BASE_URL', "\"http://dev.myserver.com\""
+            buildConfigField 'String', 'APP_FLAVOR', "\"dev\""
+            resValue "string", "app_name", "Test App Dev"
+        }
+
+        local {
+            dimension 'defaultFlavor'
+            applicationId 'com.tutorials.flutter_app'
+            buildConfigField 'String', 'BASE_URL', "\"http://dev.myserver.com\""
+            buildConfigField 'String', 'APP_FLAVOR', "\"local\""
+            resValue "string", "app_name", "Test App Local"
+        }
+
     }
 }
 
@@ -64,4 +93,18 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    // Logger library
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+    // Firebase messaging.
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
+
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.3'
 }
+
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
