--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   # Service locator
   get_it: ^7.2.0
   # For Navigation and Themes.
-  get:
+  get: ^4.6.1
 
   # Functional programming in Dart.
   dartz: ^0.10.0
@@ -45,8 +45,7 @@ dependencies:
   connectivity: ^3.0.2
   flutter_local_notifications: ^9.0.1
   ndialog: ^4.1.0
-
-
+  permission_handler: ^8.3.0
 
 dev_dependencies:
   flutter_test:
