--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_local_notifications: ^9.5.3+1
   flutter_flavorizr: ^2.1.3
   permission_handler: ^8.3.0
+  location: ^4.2.0
 
 
 dev_dependencies:
